2005-07-28  Thomas Schwinge  <schwinge@nic-nac-project.de>

	* misc/error.c [_LIBC]: Include <stdbool.h> and <stdint.h>.

2005-07-28  Ulrich Drepper  <drepper@redhat.com>

	* nis/nis_xdr.c: Help gcc to generate unnecessary wrapper functions.

2005-07-28  Jakub Jelinek  <jakub@redhat.com>

	* stdio-common/fxprintf.c (__fxprintf): Add INTUSE to _IO_vfprintf
	call.
	* gmon/gmon.c (write_gmon): Use __snprintf rather than snprintf.

2005-07-28  Ulrich Drepper  <drepper@redhat.com>

	* nis/nis_file.c: Rewrite the two pairs of functions into wrappers
	around a pair of new, generalized functions.  22% size reduction.

2005-07-27  Ulrich Drepper  <drepper@redhat.com>

	* nis/nis_xdr.c: Remove unnecessary cast which might hide bugs.
	Rearrange code.  This reduces the code size 10%.

2005-07-26  Jakub Jelinek  <jakub@redhat.com>

	* misc/error.c (error_tail): Fix a comment typo.

2005-07-25  Ulrich Drepper  <drepper@redhat.com>

	* po/zh_TW.po: Update from translation team.

	* debug/mbstowcs_chk.c: New file.
	* debug/wcstombs_chk.c: New file.
	* debug/Makefile (routines): Add mbstowcs_chk and wcstombs_chk.
	* debug/Versions: Add __mbstowcs_chk and __wcstombs_chk.
	* stdlib/bits/stdlib.h: Add definitions for mbstowcs and wcstombs.

	* wcsmbs/bits/wchar2.h (mbsrtowcs): Pretty printing.

2005-07-24  Ulrich Drepper  <drepper@redhat.com>

	* string/test-memset.c (test_main): Use negative byte value in
	test.

	* string/test-memset.c (do_one_test): Compare effect of call, not
	only return value.
	Add a few casts to avoid warnings.

2005-07-24  SUGIOKA Toshinobu  <sugioka@itonet.co.jp>

	* sysdeps/sh/memset.S (memset): Correct 2nd argument handling.

2005-07-24  Ulrich Drepper  <drepper@redhat.com>

	[BZ #1125]
	* posix/Makefile (tests): Add tst-execvp4.
	* posix/tst-execvp4.c: New file.

2005-07-24  Jakub Jelinek  <jakub@redhat.com>

	[BZ #1125]
	* posix/execvp.c (execvp): Change path_malloc to
	char *, free that pointer on failure.
